<resources>
    <string name="app_name">Quiz Corner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questions">Questions</string>
    <string name="_10">10</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_anwser">Wrong Anwser</string>
    <string name="result">Result</string>
    <string name="go_to_home">GO TO HOME</string>
    <string name="_90">90%</string>
    <string name="not_answered_questions">Not Answered Questions</string>
    <string name="na">NA</string>
</resources>