<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:id="@+id/text_view_id"
    tools:context=".views.ResultFragment">

    <ProgressBar
        android:id="@+id/resultCoutProgessBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_marginTop="100dp"
        android:indeterminateTint="@color/light_sky"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />


    <TextView
        android:id="@+id/resultpercentageTv"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:text="@string/_90"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="153dp"/>

    <Button
        android:id="@+id/homebtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/go_to_home"
        android:backgroundTint="@color/light_sky"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="646dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="58dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_answer"
        android:textSize="17sp"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="282dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong_anwser"
        android:textSize="17sp"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="337dp"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_answered_questions"
        android:textSize="17sp"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="390dp" />

    <TextView
        android:id="@+id/correctAnswerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/na"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        tools:layout_editor_absoluteX="310dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NA"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        tools:layout_editor_absoluteX="310dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NA"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        tools:layout_editor_absoluteX="310dp" />

</androidx.constraintlayout.widget.ConstraintLayout>